WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249723
REGRESSION (
258175@main
?): [ iOS Debug ] TestWebKitAPI.InAppBrowserPrivacy.AppBoundDomainAllowsServiceWorkers is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=249723
Summary
REGRESSION (258175@main?): [ iOS Debug ] TestWebKitAPI.InAppBrowserPrivacy.Ap...
Karl Rackler
Reported
2022-12-21 09:45:09 PST
Description: TestWebKitAPI.InAppBrowserPrivacy.AppBoundDomainAllowsServiceWorkers The first failure I saw on the dashboard after a period of consistent passing was on 12/16/2022 at
257982@main
when it began to crash consistently. This continues until approximately 12/21/2022 at
258170@main
when the test began to consistently fail. I am having difficulty reproducing this issue. History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.InAppBrowserPrivacy.AppBoundDomainAllowsServiceWorkers
Test Run:
https://build.webkit.org/#/builders/663/builds/449
Result: /Volumes/Data/worker/Apple-iOS-16-Simulator-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/InAppBrowserPrivacy.mm:974 Expected equality of these values: 1u Which is: 1 [websiteDataRecords count] Which is: 2 LEAK: 1 WebProcessPool worker/0 TestWebKitAPI.InAppBrowserPrivacy.AppBoundDomainAllowsServiceWorkers Failed LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy worker/0 TestWebKitAPI.InAppBrowserPrivacy.AppBoundDomainAllowsServiceWorkers Failed LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-21 09:45:43 PST
<
rdar://problem/103601970
>
Alex Christensen
Comment 2
2022-12-21 22:43:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7998
EWS
Comment 3
2022-12-22 16:29:33 PST
Committed
258268@main
(5ea941c44c07): <
https://commits.webkit.org/258268@main
> Reviewed commits have been landed. Closing PR #7998 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug